--- a/MiDocOnline/app/src/main/res/drawable/button_red_back.xml
+++ b/MiDocOnline/app/src/main/res/drawable/button_red_back.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="@dimen/padding_small"/>
-    <stroke android:color="@color/blue"
+    <stroke android:color="@color/primary_dark"
         android:width="1dp"/>
-    <solid android:color="@color/blue_dark"/>
+    <solid android:color="@color/primary_dark"/>
 </shape>
