--- a/MiDocOnline/app/src/main/res/layout/activity_sign_up.xml
+++ b/MiDocOnline/app/src/main/res/layout/activity_sign_up.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent"
     tools:context="com.midoconline.app.ui.activities.SignUpActivity"
     android:orientation="vertical"
-    android:layout_margin="@dimen/margin_xxlarge">
+    android:layout_margin="@dimen/margin_xxlarge"
+    android:id="@+id/MainLayoutWrapper">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_name"
@@ -19,6 +20,21 @@
         android:hint="@string/name_text"
         android:padding="@dimen/padding_extra_normal"
         android:layout_marginTop="@dimen/margin_xlarge"/>
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_surname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edt_surname"
+            android:background="@drawable/edittext_custom_background"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:hint="@string/surname_text"
+            android:padding="@dimen/padding_extra_normal"
+            android:layout_marginTop="@dimen/margin_xlarge"/>
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_email"
@@ -37,6 +53,22 @@
         />
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_mobile"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edt_mobile"
+            android:background="@drawable/edittext_custom_background"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:hint="@string/mobile_text"
+            android:padding="@dimen/padding_extra_normal"
+            android:layout_marginTop="@dimen/margin_normal"
+            />
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
         android:id="@+id/til_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -50,6 +82,21 @@
         android:hint="@string/password_text"
         android:padding="@dimen/padding_extra_normal"
         android:layout_marginTop="@dimen/margin_normal"/>
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_birthday"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/edt_birthday"
+            android:background="@drawable/edittext_custom_background"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:hint="@string/birthday_text"
+            android:padding="@dimen/padding_extra_normal"
+            android:layout_marginTop="@dimen/margin_normal"/>
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_speciality_licence"
