History page changes

--- a/MiDocOnline/app/src/main/res/values/colors.xml
+++ b/MiDocOnline/app/src/main/res/values/colors.xml
@@ -3,16 +3,16 @@
     <color name="primary">#030303</color>
     <color name="primary_dark">#000000</color>
     <color name="primary_light">#030303</color>
-    <color name="accent">#3b62e1</color>
-    <color name="blue">#2196F3</color>
-    <color name="blue_dark">#1976D2</color>
+    <color name="accent">#F44336</color>
+    <color name="blue">#1b97f3</color>
+    <color name="blue_dark">#0d8dec</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
     <color name="text">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
     <color name="window_background">#FFFFFF</color>
     <color name="list_item_footer">#D7D7D7</color>
-    <color name="navigationBarColor">#1976D2</color>
+    <color name="navigationBarColor">#0d8dec</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="version_no">#F44336</color>
