--- a/MiDocOnline/app/src/main/res/layout/activity_main.xml
+++ b/MiDocOnline/app/src/main/res/layout/activity_main.xml
@@ -13,187 +13,225 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="90dp"
             android:background="@color/primary"
-            app:layout_scrollFlags="scroll|enterAlways" >
+            app:layout_scrollFlags="scroll|enterAlways"
+            android:contentInsetStart="0dp"
+            android:contentInsetLeft="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <TextView
+                <ImageView
+                    android:id="@+id/nav_drawer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_navigation"
+                    android:tint="@color/white"
+                    android:padding="@dimen/padding_normal"/>
+                <Spinner
+                    android:id="@+id/toolbar_spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentBottom="true"
+                    android:visibility="gone"/>
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:text="MiDocOnline"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/text_size_xxlarge"/>
+                    android:src="@drawable/logo"
+                    android:layout_toRightOf="@+id/nav_drawer"
+                    android:layout_margin="@dimen/margin_normal"
+                  />
             </RelativeLayout>
             </android.support.v7.widget.Toolbar>
 
-        <RelativeLayout
-            android:id="@+id/content"
+        <ScrollView
+            android:layout_below="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/toolbar">
-
-            <Button
-                android:id="@+id/btn_emergency"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/emergency"
-                android:text="Emergency"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold"
-                android:layout_marginTop="@dimen/margin_xxlarge"/>
-
+            android:layout_height="match_parent">
             <RelativeLayout
-                android:id="@+id/speciality_wrapper"
+                android:id="@+id/content"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="@dimen/margin_large"
-                android:layout_marginLeft="@dimen/margin_xxlarge"
-                android:layout_marginRight="@dimen/margin_xxlarge"
-                android:background="@drawable/horizontal_blue_trip"
-                android:layout_below="@+id/btn_emergency">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="MEDICAL SPECIALITY"
-                    android:padding="@dimen/padding_normal"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/text_size_xlarge"
-                    android:layout_marginLeft="@dimen/margin_large"/>
-                <ImageView
-                    android:id="@+id/img_arrow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/arrow"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/margin_normal"
-                    android:padding="@dimen/padding_large"/>
-                <ImageView
-                    android:id="@+id/img_line"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ractangleline"
-                    android:layout_toLeftOf="@+id/img_arrow"
-                    android:layout_marginRight="@dimen/margin_normal"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/doctor_main_wrapper"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="@dimen/margin_large"
-                android:layout_marginLeft="@dimen/margin_xxlarge"
-                android:layout_marginRight="@dimen/margin_xxlarge"
-                android:background="@drawable/horizontal_blue_trip"
-                android:layout_below="@+id/speciality_wrapper"
+                android:layout_height="match_parent"
                 >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="DOCTOR"
-                    android:padding="@dimen/padding_normal"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/text_size_xlarge"
-                    android:layout_marginLeft="@dimen/margin_large"/>
-                <ImageView
-                    android:id="@+id/img_arrow1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/arrow"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/margin_normal"
-                    android:padding="@dimen/padding_large"/>
-                <ImageView
-                    android:id="@+id/img_line1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ractangleline"
-                    android:layout_toLeftOf="@+id/img_arrow1"
-                    android:layout_marginRight="@dimen/margin_normal"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
-            <RelativeLayout
-                android:id="@+id/visit_and_history_wrapper"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="@dimen/margin_large"
-                android:layout_marginLeft="@dimen/margin_xxlarge"
-                android:layout_marginRight="@dimen/margin_xxlarge"
-                android:background="@drawable/horizontal_blue_trip"
-                android:layout_below="@+id/doctor_main_wrapper"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="2ND VISIT AND HISTORY"
-                    android:padding="@dimen/padding_normal"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/text_size_xlarge"
-                    android:layout_marginLeft="@dimen/margin_large"/>
 
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/visit_and_history_wrapper">
-                <ImageView
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:layout_margin="@dimen/margin_large"
-                    android:src="@drawable/ellips"/>
-                <ImageView
-                    android:layout_width="40dp"
+                <Button
+                    android:id="@+id/btn_emergency"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:layout_margin="@dimen/margin_large"
-                    android:src="@drawable/phone"/>
+                    android:background="@drawable/emergency"
+                    android:text="Emergency"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_large"
+                    android:textStyle="bold"
+                    android:layout_marginTop="@dimen/margin_xxlarge"/>
+
+                <RelativeLayout
+                    android:id="@+id/speciality_wrapper"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="@dimen/margin_large"
+                    android:layout_marginLeft="@dimen/margin_xxlarge"
+                    android:layout_marginRight="@dimen/margin_xxlarge"
+                    android:background="@drawable/horizontal_blue_trip"
+                    android:layout_below="@+id/btn_emergency">
+
+                    <Spinner
+                        android:id="@+id/MS_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:drawSelectorOnTop="true"
+                        android:layout_centerVertical="true"
+                        style="@style/Widget.MyApp.HeaderBar.Spinner"
+                        />
+
+                    <ImageView
+                        android:id="@+id/img_arrow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrow"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="@dimen/margin_normal"
+                        android:padding="@dimen/padding_large"/>
+                    <ImageView
+                        android:id="@+id/img_line"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ractangleline"
+                        android:layout_toLeftOf="@+id/img_arrow"
+                        android:layout_marginRight="@dimen/margin_normal"
+                        android:layout_centerVertical="true"/>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/doctor_main_wrapper"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="@dimen/margin_large"
+                    android:layout_marginLeft="@dimen/margin_xxlarge"
+                    android:layout_marginRight="@dimen/margin_xxlarge"
+                    android:background="@drawable/horizontal_blue_trip"
+                    android:layout_below="@+id/speciality_wrapper"
+                    >
+                    <Spinner
+                        android:id="@+id/Doctor_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:drawSelectorOnTop="true"
+                        android:layout_centerVertical="true"
+                        style="@style/Widget.MyApp.HeaderBar.Spinner"/>
+                    <ImageView
+                        android:id="@+id/img_arrow1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrow"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="@dimen/margin_normal"
+                        android:padding="@dimen/padding_large"/>
+                    <ImageView
+                        android:id="@+id/img_line1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ractangleline"
+                        android:layout_toLeftOf="@+id/img_arrow1"
+                        android:layout_marginRight="@dimen/margin_normal"
+                        android:layout_centerVertical="true"/>
+                </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/visit_and_history_wrapper"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="@dimen/margin_large"
+                    android:layout_marginLeft="@dimen/margin_xxlarge"
+                    android:layout_marginRight="@dimen/margin_xxlarge"
+                    android:background="@drawable/horizontal_blue_trip"
+                    android:layout_below="@+id/doctor_main_wrapper"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="2ND VISIT AND HISTORY"
+                        android:padding="@dimen/padding_normal"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/text_size_xlarge"
+                        android:layout_marginLeft="@dimen/margin_large"/>
+
+                </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/callBtn_wrapper"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/visit_and_history_wrapper"
+                    android:layout_marginTop="@dimen/margin_normal">
+                    <ImageView
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="@dimen/margin_normal"
+                        android:src="@drawable/ellips"/>
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="@dimen/margin_large"
+                        android:src="@drawable/phone"/>
+                </RelativeLayout>
+                <Button
+                    android:id="@+id/btn_doctor_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/horizontal_blue_trip"
+                    android:layout_below="@+id/callBtn_wrapper"
+                    android:text="DOCTOR LOG-IN"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_large"
+                    android:textStyle="bold"
+                    android:layout_marginTop="@dimen/margin_normal"
+                    android:layout_marginLeft="@dimen/margin_xxlarge"
+                    android:layout_marginRight="@dimen/margin_xxlarge"/>
+
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/btn_doctor_login"
+                    android:layout_margin="@dimen/margin_large">
+                    <TextView
+                        android:id="@+id/text_agree"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:padding="@dimen/padding_large"
+                        android:textColor="@color/black"
+                        android:text="Agree Payment Terms"/>
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/text_agree"
+                        android:layout_alignBaseline="@+id/text_agree"/>
+                </RelativeLayout>
             </RelativeLayout>
+        </ScrollView>
 
-
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_margin="@dimen/margin_large">
-    <TextView
-        android:id="@+id/text_agree"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:padding="@dimen/padding_large"
-        android:textColor="@color/black"
-        android:text="Agree Payment Terms"/>
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/text_agree"
-        android:layout_alignBaseline="@+id/text_agree"/>
-</RelativeLayout>
-        </RelativeLayout>
 
     </RelativeLayout>
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/layout_drawer_header"
-        app:menu="@menu/navigation_menu_drawer"></android.support.design.widget.NavigationView>
+    <!--<android.support.design.widget.NavigationView-->
+        <!--android:id="@+id/nav_view"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="start"-->
+        <!--android:fitsSystemWindows="true"-->
+        <!--app:headerLayout="@layout/layout_drawer_header"-->
+        <!--app:menu="@menu/navigation_menu_drawer"></android.support.design.widget.NavigationView>-->
 </android.support.v4.widget.DrawerLayout>
