--- a/MiDocOnline/app/src/main/res/layout/activity_sign_in.xml
+++ b/MiDocOnline/app/src/main/res/layout/activity_sign_in.xml
@@ -1,51 +1,67 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="@dimen/margin_xxlarge">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_email"
+    <include
+        android:id="@+id/toolbar_wrapper"
+        layout="@layout/layout_header_file"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/edt_email"
-            android:background="@drawable/edittext_custom_background"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:hint="@string/email_text"
-            android:padding="@dimen/padding_extra_normal"
-            android:layout_marginTop="@dimen/margin_normal"
-            />
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_password"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar_wrapper"
+        android:layout_margin="@dimen/margin_xxlarge"
+        android:orientation="vertical">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_email"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/edt_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:background="@drawable/edittext_custom_background"
+                android:hint="@string/email_text"
+                android:padding="@dimen/padding_extra_normal"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/edt_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:background="@drawable/edittext_custom_background"
+                android:hint="@string/password_text"
+                android:padding="@dimen/padding_extra_normal"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:inputType="textPassword"/>
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/btn_sign_in"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:id="@+id/edt_password"
-            android:background="@drawable/edittext_custom_background"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/margin_xlarge"
+            android:background="@drawable/edittext_custom_background_black"
+            android:text="@string/sign_in_text"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:hint="@string/password_text"
-            android:padding="@dimen/padding_extra_normal"
-            android:layout_marginTop="@dimen/margin_normal"/>
-    </android.support.design.widget.TextInputLayout>
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
 
-    <Button
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_in_text"
-        android:id="@+id/btn_sign_in"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/edittext_custom_background_black"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:layout_marginTop="@dimen/margin_xlarge"
-        android:textSize="@dimen/text_size_large"/>
-
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
