--- a/MiDocOnline/app/src/main/res/layout/activity_sign_up.xml
+++ b/MiDocOnline/app/src/main/res/layout/activity_sign_up.xml
@@ -1,133 +1,170 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.midoconline.app.ui.activities.SignUpActivity"
     android:orientation="vertical"
-    android:layout_margin="@dimen/margin_xxlarge"
-    android:id="@+id/MainLayoutWrapper">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <EditText
+   >
+    <include
+        android:id="@id/toolbar_wrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edt_name"
-        android:background="@drawable/edittext_custom_background"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:hint="@string/name_text"
-        android:padding="@dimen/padding_extra_normal"
-        android:layout_marginTop="@dimen/margin_xlarge"/>
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_surname"
+        layout="@layout/layout_header_file"/>
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar_wrapper"
+        >
+
+        <LinearLayout
+            android:id="@+id/MainLayoutWrapper"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/edt_surname"
-            android:background="@drawable/edittext_custom_background"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:hint="@string/surname_text"
-            android:padding="@dimen/padding_extra_normal"
-            android:layout_marginTop="@dimen/margin_xlarge"/>
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/edt_email"
-        android:background="@drawable/edittext_custom_background"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:hint="@string/email_text"
-        android:padding="@dimen/padding_extra_normal"
-        android:layout_marginTop="@dimen/margin_normal"
-        />
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_mobile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/edt_mobile"
-            android:background="@drawable/edittext_custom_background"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:hint="@string/mobile_text"
-            android:padding="@dimen/padding_extra_normal"
-            android:layout_marginTop="@dimen/margin_normal"
-            />
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/edt_password"
-        android:background="@drawable/edittext_custom_background"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:hint="@string/password_text"
-        android:padding="@dimen/padding_extra_normal"
-        android:layout_marginTop="@dimen/margin_normal"/>
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_birthday"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/edt_birthday"
-            android:background="@drawable/edittext_custom_background"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:hint="@string/birthday_text"
-            android:padding="@dimen/padding_extra_normal"
-            android:layout_marginTop="@dimen/margin_normal"/>
-    </android.support.design.widget.TextInputLayout>
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_speciality_licence"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/margin_xlarge"
+            android:orientation="vertical">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/edt_speciality_licence"
-            android:background="@drawable/edittext_custom_background"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:hint="@string/specialist_lic_text"
-            android:padding="@dimen/padding_extra_normal"
-            android:layout_marginTop="@dimen/margin_normal"/>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_xlarge">
 
-    </android.support.design.widget.TextInputLayout>
+                <EditText
+                    android:id="@+id/edt_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_custom_background"
+                    android:hint="@string/name_text"
+                    android:padding="@dimen/padding_extra_normal"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_surname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:visibility="gone">
+
+                <EditText
+                    android:id="@+id/edt_surname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_xlarge"
+                    android:background="@drawable/edittext_custom_background"
+                    android:hint="@string/surname_text"
+                    android:padding="@dimen/padding_extra_normal"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_normal">
+
+                <EditText
+                    android:id="@+id/edt_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_custom_background"
+                    android:hint="@string/email_text"
+                    android:padding="@dimen/padding_extra_normal"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:inputType="textEmailAddress"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_mobile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:visibility="gone">
+
+                <EditText
+                    android:id="@+id/edt_mobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_normal"
+                    android:background="@drawable/edittext_custom_background"
+                    android:hint="@string/mobile_text"
+                    android:padding="@dimen/padding_extra_normal"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_normal">
+
+                <EditText
+                    android:id="@+id/edt_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_custom_background"
+                    android:hint="@string/password_text"
+                    android:padding="@dimen/padding_extra_normal"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:inputType="textPassword"/>
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_birthday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:visibility="gone">
+
+                <EditText
+                    android:id="@+id/edt_birthday"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_normal"
+                    android:background="@drawable/edittext_custom_background"
+                    android:hint="@string/birthday_text"
+                    android:padding="@dimen/padding_extra_normal"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_speciality_licence"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_normal">
+
+                <EditText
+                    android:id="@+id/edt_speciality_licence"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittext_custom_background"
+                    android:hint="@string/specialist_lic_text"
+                    android:padding="@dimen/padding_extra_normal"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white" />
+
+            </android.support.design.widget.TextInputLayout>
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/request_approval_text"
-        android:id="@+id/btn_request_approval"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/edittext_custom_background_black"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:padding="@dimen/padding_large"
-        android:layout_marginTop="@dimen/margin_xlarge"
-        android:textSize="@dimen/text_size_large"/>
+            <Button
+                android:id="@+id/btn_request_approval"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/margin_xlarge"
+                android:background="@drawable/edittext_custom_background_black"
+                android:padding="@dimen/padding_large"
+                android:text="@string/request_approval_text"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_large"
+                android:textStyle="bold" />
 
-</LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+</RelativeLayout>
