--- a/MiDocOnline/app/src/main/res/layout/activity_splash_screen.xml
+++ b/MiDocOnline/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,11 +1,11 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
   <ImageView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:src="@drawable/splash_screen"
+      android:src="@drawable/splach_bg"
       android:scaleType="fitXY"/>
 
-</FrameLayout>
+</RelativeLayout>
