--- a/MiDocOnline/app/src/main/res/values-v11/styles.xml
+++ b/MiDocOnline/app/src/main/res/values-v11/styles.xml
@@ -12,4 +12,17 @@
         <item name="android:background">@color/black_overlay</item>
     </style>
 
+    <style name="Widget.MyApp.HeaderBar.Spinner" parent="Widget.AppCompat.Light.Spinner.DropDown.ActionBar">
+        <item name="android:background">?android:selectableItemBackground</item>
+        <item name="android:dropDownSelector">?android:selectableItemBackground</item>
+        <item name="android:divider">@null</item>
+    </style>
+    <style name="CustomTextAppearance" parent="TextAppearance.MaterialCalendarWidget.Date">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="CustomTextAppearanceMonth" parent="TextAppearance.MaterialCalendarWidget.Date">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/black</item>
+    </style>
+
 </resources>
