--- a/MiDocOnline/app/src/main/res/layout/activity_answer_emeregency_call_screen.xml
+++ b/MiDocOnline/app/src/main/res/layout/activity_answer_emeregency_call_screen.xml
@@ -32,7 +32,7 @@
                 android:id="@+id/btn_answercall"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:text="ANSWER CALL"
+                android:text="KIDS EMERGENCY"
                 android:textColor="@color/text_white"
                 android:textSize="@dimen/text_size_large"
                 android:textStyle="bold"
@@ -44,7 +44,7 @@
                 android:id="@+id/btn_history"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:text="HISTORY"
+                android:text="ADULT EMERGENCY"
                 android:textColor="@color/text_white"
                 android:textSize="@dimen/text_size_large"
                 android:textStyle="bold"
