--- a/MiDocOnline/app/src/main/res/menu/menu_answer_emeregency_call_screen.xml
+++ b/MiDocOnline/app/src/main/res/menu/menu_answer_emeregency_call_screen.xml
@@ -2,6 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.midoconline.app.ui.activities.AnswerEmeregencyCallScreen">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_settings" android:title="Log Out"
+        android:orderInCategory="100" app:showAsAction="always|withText" />
 </menu>
