--- a/MiDocOnline/app/src/main/res/values-v21/styles.xml
+++ b/MiDocOnline/app/src/main/res/values-v21/styles.xml
@@ -6,6 +6,8 @@
         <item name="android:dropDownSelector">?android:selectableItemBackground</item>
         <item name="android:divider">@null</item>
         <item name="android:overlapAnchor">true</item>
+        <item name="actionMenuTextColor">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
     </style>
     <style name="CustomTextAppearance" parent="TextAppearance.MaterialCalendarWidget.Date">
         <item name="android:textColor">@color/white</item>
