--- a/MiDocOnline/app/src/main/res/values/styles.xml
+++ b/MiDocOnline/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="colorAccent">@color/accent</item>
         <item name="android:windowBackground">@color/window_background</item>
         <item name="android:textColorHint">@color/white</item>
+        <item name="actionMenuTextColor">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
     </style>
 
     <style name="FullscreenTheme" parent="android:Theme.NoTitleBar">
