edit profile changes

--- a/MiDocOnline/app/src/main/res/layout/activity_my_profile.xml
+++ b/MiDocOnline/app/src/main/res/layout/activity_my_profile.xml
@@ -73,7 +73,7 @@
                 android:background="@drawable/edittext_custom_background"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:hint="OrthoPedics"
+                android:hint="Not Mentioned"
                 android:gravity="center"
                 android:padding="@dimen/padding_extra_normal"
                 android:layout_marginTop="@dimen/margin_small"
@@ -99,7 +99,7 @@
                 android:background="@drawable/edittext_custom_background"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:hint="Email"
+                android:hint="Not Mentioned"
                 android:gravity="center"
                 android:padding="@dimen/padding_extra_normal"
                 android:layout_marginTop="@dimen/margin_small"
@@ -125,7 +125,7 @@
                 android:background="@drawable/edittext_custom_background"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
-                android:hint="9766804425"
+                android:hint="Not Mentioned"
                 android:gravity="center"
                 android:padding="@dimen/padding_extra_normal"
                 android:layout_marginTop="@dimen/margin_small"
